--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 This project presents a <strong>data-driven framework</strong for calibrating and validating <strong>heterogeneous agent-based pedestrian models</strong using real-world multi-agent trajectory data.  
 By integrating <em>Particle Swarm Optimization (PSO)</em> with a <em>deep learning surrogate model</em (TabNet), the framework accelerates parameter calibration while maintaining accuracy in reproducing pedestrian behaviors in various environments.</p>
 
-<img src="dd-abpm-visual.png" alt="Framework Overview Diagram" class="project-image">
+<img src="main.png" alt="Framework Overview Diagram" class="project-image">
 
 <h2 class="section-title">🔍 Output & Results</h2>
 <p>
@@ -64,11 +64,9 @@ Validation results showed strong alignment between simulated and observed pedest
 
 <h2 class="section-title">📄 Details & Resources</h2>
 <p>
-For full methodology, dataset details, and implementation code, please visit:
+For full methodology, and dataset details, please visit:
 </p>
-<a href="https://github.com/askimon/dd-abpm" target="_blank" class="details-link">📂 View Project on GitHub</a>  
-<br>
-<a href="https://arxiv.org/abs/your-paper-id" target="_blank" class="details-link">📄 Read the Preprint</a>
+<a href="https://doi.org/10.1109/access.2025.3582778" target="_blank" class="details-link">📄 Read the Full Paper</a>
 
 </body>
 </html>
