--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     color: #333;
   }
   .project-image {
-    max-width: 100%;
-    height: auto;
-    border-radius: 6px;
-    margin: 15px 0;
+  width: 80%;
+  height: auto;
+  border-radius: 8px;
+  margin: 16px auto;
+  display: block; }
+  .section-title {
+    margin-top: 28px; color: var(--ink2);
+    border-bottom: 2px solid var(--rule); padding-bottom: 6px;
   }
+
   .section-title {
     margin-top: 30px;
     color: #444;
