--- a/index.html
+++ b/index.html
@@ -73,5 +73,10 @@ For full methodology, and dataset details, please visit:
 </p>
 <a href="https://doi.org/10.1109/access.2025.3582778" target="_blank" class="details-link">📄 Read the Full Paper</a>
 
+<footer style="margin-top: 3em; font-size: 0.85em; color: #666;">
+    Last updated: July 2025 • Author: Sanjjamts Amartaivan
+  </footer>
+
+
 </body>
 </html>
