--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </style>
 </head>
 <body>
-<p><a href="https://askimon.github.io/">🏠 Home</a></p>
+<p><a href="https://amartaivan-s.github.io/">🏠 Home</a></p>
 <h1>🚀 Data-Driven Framework for Agent-Based Pedestrian Modeling and Simulation</h1>
 
 <p><strong>Overview:</strong><br>
