--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     color: #333;
   }
   .project-image {
-  width: 100%;
+  width: 60%;
   height: auto;
   border-radius: 8px;
   margin: 16px auto;
@@ -51,10 +51,10 @@
 <h1>🚀 Data-Driven Framework for Agent-Based Pedestrian Modeling and Simulation</h1>
 
 <p><strong>Overview:</strong><br>
-This project presents a <strong>data-driven framework</strong for calibrating and validating <strong>heterogeneous agent-based pedestrian models</strong using real-world multi-agent trajectory data.  
+This project presents a <strong> data-driven computational framework</strong for calibrating and validating <strong> heterogeneous agent-based pedestrian models</strong using real-world multi-agent trajectory data.  
 By integrating <em>Particle Swarm Optimization (PSO)</em> with a <em>deep learning surrogate model</em (TabNet), the framework accelerates parameter calibration while maintaining accuracy in reproducing pedestrian behaviors in various environments.</p>
 
-<img src="simulation_steps.png" alt="Framework Overview Diagram" class="project-image">
+<` src="simulation_steps.png" alt="Framework Overview Diagram" class="project-image">
 
 <h2 class="section-title">🔍 Output & Results</h2>
 <p>
