--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 This project presents a <strong> data-driven computational framework</strong for calibrating and validating <strong> heterogeneous agent-based pedestrian models</strong using real-world multi-agent trajectory data.  
 By integrating <em>Particle Swarm Optimization (PSO)</em> with a <em>deep learning surrogate model</em (TabNet), the framework accelerates parameter calibration while maintaining accuracy in reproducing pedestrian behaviors in various environments.</p>
 
-<` src="simulation_steps.png" alt="Framework Overview Diagram" class="project-image">
+<src="simulation_steps.png" alt="Framework Overview Diagram" class="project-image">
 
 <h2 class="section-title">🔍 Output & Results</h2>
 <p>
