--- a/index.html
+++ b/index.html
@@ -16,16 +16,12 @@
     color: #333;
   }
   .project-image {
-  width: 60%;
-  height: auto;
-  border-radius: 8px;
-  margin: 16px auto;
-  display: block; }
-  .section-title {
-    margin-top: 28px; color: var(--ink2);
-    border-bottom: 2px solid var(--rule); padding-bottom: 6px;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin: 16px auto;
+    display: block;
   }
-
   .section-title {
     margin-top: 30px;
     color: #444;
@@ -48,13 +44,15 @@
 </head>
 <body>
 <p><a href="https://amartaivan-s.github.io/">🏠 Home</a></p>
+
 <h1>🚀 Data-Driven Framework for Agent-Based Pedestrian Modeling and Simulation</h1>
 
 <p><strong>Overview:</strong><br>
-This project presents a <strong> data-driven computational framework</strong for calibrating and validating <strong> heterogeneous agent-based pedestrian models</strong using real-world multi-agent trajectory data.  
-By integrating <em>Particle Swarm Optimization (PSO)</em> with a <em>deep learning surrogate model</em (TabNet), the framework accelerates parameter calibration while maintaining accuracy in reproducing pedestrian behaviors in various environments.</p>
+This project presents a <strong>data-driven computational framework</strong> for calibrating and validating <strong>heterogeneous agent-based pedestrian models</strong> using real-world multi-agent trajectory data.  
+By integrating <em>Particle Swarm Optimization (PSO)</em> with a <em>deep learning surrogate model</em> (TabNet), the framework accelerates parameter calibration while maintaining accuracy in reproducing pedestrian behaviors in various environments.</p>
 
-<src="simulation_steps.png" alt="Framework Overview Diagram" class="project-image">
+<img src="simulation_steps.png" alt="Framework Overview Diagram" class="project-image">
+
 
 <h2 class="section-title">🔍 Output & Results</h2>
 <p>
