--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ For full methodology, and dataset details, please visit:
 <h2 class="section-title">How to Cite</h2>
 <p class="meta">
 S. Amartaivan and H. Morita,
-<i>Efficient Calibration of Heterogeneous Agent-Based Pedestrian Model Using PSO With Deep Learning Surrogates</i>,
+<i>"Efficient Calibration of Heterogeneous Agent-Based Pedestrian Model Using PSO With Deep Learning Surrogates"</i>,
 IEEE Access, vol. 13, pp. 109185-109199, 2025, doi: 10.1109/ACCESS.2025.3582778.
 </p>
 
